<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/booked_removebg_preview"
        app:srcCompat="@drawable/booked_removebg_preview"
        tools:srcCompat="@drawable/booked_removebg_preview" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/cardview_dark_background">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/umail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            android:textColorHighlight="@color/background"
            android:textColorLink="@color/background"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/cardview_dark_background">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/upwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="text"
            android:textColorHighlight="@color/background"
            android:textColorLink="@color/background"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background"
        android:text="@string/log_in"
        android:textColor="#ffffff"
        android:textSize="22sp" />

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:textSize="22sp" />

</LinearLayout>